--- a/index.html
+++ b/index.html
@@ -1,86 +1,91 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exemplo de Página HTML</title>
-    <link rel="stylesheet" href="css/style.css">
-<script src="js/script.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Roberto Silva</title>
+  <link rel="stylesheet" href="css/style.css" />
+  <script src="js/script.js" defer></script>
+  <meta name="description" content="Página pessoal de Roberto Silva – programação, finanças, redes sociais, eletrônica e mais.">
 </head>
 <body>
-    <header>
-        <a href="index.html">
-        <img src="imagens/Roberto_SilvaLogo.png" alt="Logo da Página" class="logo">
-        </a>
-        <nav class="navegacao">
-            <button class="menu-toggle" onclick="toggleMenu()">☰</button>
-            <ul class="menu">
-                <li><a href="aboutme.html">Sobre</a></li>
-                <li><a href="contato.html">Contato</a></li>
-                <li><a href="portfolio.html">Portfólio</a></li>
-                <li><a href="socialmedia.html">SocialMedia</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <div class="container">
-        <section class="duascolunas">
-            <div>
-                <h1>Sobre mim</h1>
-                <p>
-                    Sou uma pessoa focada em crescimento pessoal e desenvolvimento contínuo.
-                    Tenho objetivos bem definidos e atuo como programação, finanças ,redes sociais ,eletronica,vendas entre outros.
-                </p>
-                </div>
-                <div>
-                <img src="imagens/bertaoculosdesol.jpg" alt="foto do berto com oculos de sol">
-                </div>
-        </section>
+
+  <header>
+    <a href="index.html">
+      <img src="imagens/Roberto_SilvaLogo.png" alt="Logo da Página" class="logo" />
+    </a>
+    <nav class="navegacao">
+      <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+      <ul class="menu">
+        <li><a href="aboutme.html">Sobre</a></li>
+        <li><a href="contato.html">Contato</a></li>
+        <li><a href="portfolio.html">Portfólio</a></li>
+        <li><a href="socialmedia.html">Social Media</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <div class="container">
+      <section class="duascolunas">
+        <div>
+          <h1>Sobre mim</h1>
+          <p>
+            Sou uma pessoa focada em crescimento pessoal e desenvolvimento contínuo.
+            Tenho objetivos bem definidos e atuo com programação, finanças, redes sociais, eletrônica, vendas entre outros.
+          </p>
         </div>
-        <section id="colunaimpar" class="duascolunas">
-            <div>
-                <h2>Habilidades</h2>
-                <ul>
-                    <li>Programação</li>
-                    <li>Finanças</li>
-                    <li>Redes Sociais</li>
-                    <li>Eletrônica</li>
-                    <li>Vendas</li>
-                </ul>
-                  <h2>Objetivos</h2>
-                <p>
-                    Tanbém quero aprender mais habilidades que me facilitem a vida e me ajudem a alcançar meus objetivos
-                    e de eu ser menos independente de algo apesar claro que sempre vou sempre depender de algo que alguem fez.
-                    Meus futuros objetivos é evoluir como pessoa em todas as áreas da minha vida.
-                </p>
-            </div>
+        <div>
+          <img src="imagens/bertaoculosdesol.jpg" alt="foto do Berto com óculos de sol" />
         </div>
-        <div class="container">
-        </section>
-        <section class="duascolunas">
-            <div>
-                <h2>Contato</h2>
-                <p>
-                    Você pode entrar em contato comigo através do e-mail:
-                    </p>
-                    <form class="formulario" action="https://formsubmit.co/robertosilvapessoal@gmail.com" method="POST">
-  <h2>Entre em Contato</h2>
+      </section>
 
-  <label for="nome">Nome</label>
-  <input type="text" id="nome" name="nome" required>
+      <section id="colunaimpar" class="duascolunas">
+        <div>
+          <h2>Habilidades</h2>
+          <ul>
+            <li>Programação</li>
+            <li>Finanças</li>
+            <li>Redes Sociais</li>
+            <li>Eletrônica</li>
+            <li>Vendas</li>
+          </ul>
 
-  <label for="email">Email</label>
-  <input type="email" id="email" name="email" required>
+          <h2>Objetivos</h2>
+          <p>
+            Também quero aprender mais habilidades que me facilitem a vida e me ajudem a alcançar meus objetivos,
+            mesmo sabendo que sempre vamos depender de algo ou de alguém. Meus objetivos futuros incluem evoluir como pessoa em todas as áreas da vida.
+          </p>
+        </div>
+      </section>
 
-  <label for="mensagem">Mensagem</label>
-  <textarea id="mensagem" name="mensagem" rows="5" required></textarea>
+      <section class="duascolunas">
+        <div>
+          <h2>Contato</h2>
+          <p>Você pode entrar em contato comigo através do formulário abaixo:</p>
 
-  <button type="submit">Enviar</button>
-</form>
-</main>
+          <form class="formulario" action="https://formsubmit.co/robertosilvapessoal@gmail.com" method="POST">
+            <h2>Entre em Contato</h2>
 
-    <footer class="branco">
-        <p>© 2025 Minha Página</p>
-    </footer>
+            <label for="nome">Nome</label>
+            <input type="text" id="nome" name="nome" required />
+
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required />
+
+            <label for="mensagem">Mensagem</label>
+            <textarea id="mensagem" name="mensagem" rows="5" required></textarea>
+
+            <button type="submit">Enviar</button>
+          </form>
+        </div>
+      </section>
+    </div>
+  </main>
+
+  <footer>
+    <p>© 2025 Roberto Silva</p>
+  </footer>
+
 </body>
 </html>
