--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li><a href="portfolio.html">Portfólio</a></li>
         <li><a href="socialmedia.html">Social Media</a></li>
       </ul>
+      <button id="darkModeToggle" aria-label="Alternar modo escuro 🌙">🌙</button>
     </nav>
   </header>
 
