--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             <textarea id="mensagem" name="mensagem" rows="5" required></textarea>
 
             <button type="submit">Enviar</button>
+            <input type="hidden" name="_next" value="https://robertosilva-pogramador.github.io/RobertoSilvaPage/index.html">
           </form>
         </div>
       </section>
